tolk-tester/tests/invalid-syntax/err-3918.tolk
const BAD = """abc\""";

fun main() {
    return 0;
}

/**
@compilation_should_fail
@stderr string pasts past end of file
 */
